--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <title>Game Name</title>
+    <title>Super mario Flash</title>
   </head>
   <body>
-    <embed src="insert.swf" width="100%" height="100%">
+    <embed src="SMF.swf" width="100%" height="100%">
     <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
   </body>
 </html>
