--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Super Mario Flash</title>
   </head>
   <body>
-    <embed src="Mario_flash.swf" width="100%" height="100%">
+    <embed src="Mario_flash.swf" width="840" height="630">
     <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
   </body>
 </html>
