--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Super Mario Flash</title>
   </head>
   <body>
+     <div style="text-align: center;">
     <embed src="Mario_flash.swf" width="840" height="630">
     <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
   </body>
