--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
   <head>
     <title>Super Mario Flash</title>
+    <script>
+        window.onbeforeunload = function() {
+            return "Are you sure you want to reload?";
+        };
+    </script>
   </head>
   <body>
      <div style="text-align: center;">
